fixed gap in dashboard

--- a/LBM-Client/src/components/DashboardUser/Dashboard/Dashboard.module.scss
+++ b/LBM-Client/src/components/DashboardUser/Dashboard/Dashboard.module.scss
@@ -166,7 +166,7 @@ $buttonh2: (
     flex-shrink: 0;
     border-radius: 16px;
     background: $greycolor;
-    // padding: 2rem;
+    padding: 2rem;
 
 
     h2{
@@ -179,6 +179,7 @@ $buttonh2: (
         line-height: 150%; /* 1.5rem */
         text-transform: uppercase;
         margin-bottom: 1rem;
+        text-align: left;
     
         // @media (max-width: 720px){
     
